# quickstart-streaming-agents

./: .gitignore  .mcp.json  .pre-commit-config.yaml  LAB1-Walkthrough.md  LAB2-Walkthrough.md  LAB2.md  LAB3-Walkthrough.md  LAB4-Walkthrough.md  LAB5-Walkthrough.md  Lab3-Walkthrough.md  Lab4-Walkthrough.md  NOLA Hackathon Guide.md  README.md  deploy.py  deploy2.py  gemini-plan.md  plan.md  pyproject.toml  requirements.txt  service.yml  setup.py  terraform-refactoring-plan.md
.github/: gitleaks-baseline.json
LAB1-Tool-Calling/: LAB1.md
assets/lab2/: LAB2.md
assets/lab5/: lab5-architecture.excalidraw
assets/pre-setup/: MCP-Server-Setup.md  MongoDB-Setup.md  Workshop-Mode-Setup.md  Zapier-Setup.md
aws/core/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
aws/lab1-tool-calling/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
aws/lab2-vector-search/: debug_publisher.py  main.tf  outputs.tf  providers.tf  publish_docs.py  publish_documents.py  publish_queries.py  terraform.tfvars  variables.tf
aws/lab3-agentic-fleet-management/: main.tf  outputs.tf  variables.tf
aws/lab3-anomaly-detection/: main.tf  test-queries.sql
azure/core/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
azure/core-workshop/: main.tf  outputs.tf  variables.tf  versions.tf
azure/lab1-tool-calling/: LAB1.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
azure/lab2-vector-search/: complete_vector_search_implementation.md  lab2_complete_sql_statements.md  main.tf  outputs.tf  providers.tf  publish_docs.py  publish_documents.py  publish_queries.py  terraform.tfvars  variables.tf  vector_search_query_comparison.md
azure/lab3-agentic-fleet-management/: main.tf  outputs.tf  providers.tf  variables.tf
orchestrate/: import.sh
orchestrate/agent/: fraud_investigation_agent.yaml  rtce_claims_demo_agent.yaml
orchestrate/tools/: get_claim_investigation.py
scripts/: __init__.py  animate_architecture.py  arcade.py  capture_lab1_data.py  capture_lab3_data.py  clear_mongodb.py  datagen.py  deploy_wrapper.py  generate-tf-credentials.sh  generate_claims_reviewed.py  generate_lab1_data.py  generate_lab_flink_summary.py  lab1_datagen.py  lab1_mcp_setup.py  lab2_publish_docs.py  lab2_publish_docs_cli.py  lab2_publish_queries.py  lab2_publish_queries_cli.py  lab3_datagen.py  lab4_datagen.py  lab4_datagen_alternate.py  lab5_mq_publisher.py  mcp_setup.py  publish_claims_to_ibmmq.py  publish_docs.py  publish_lab1_data.py  publish_lab3_data.py  publish_queries.py  run_tests.py  setup_ibm_mq_broker.sh  setup_rtce.py  setup_wxo_rtce.py  simple_deploy.py  simple_destroy.py  verify_mq_messages.py  wxo_chat.py
scripts/common/: __init__.py  azure_workshop_key_manager.py  clear_mongodb.py  cloud_detection.py  credentials.py  credentials_markdown.py  datagen_helpers.py  deploy2.py  destroy.py  destroy2.py  destroy5.py  generate_deployment_summary.py  generate_lab_flink_summary.py  logging_utils.py  login_checks.py  sql_extractors.py  terraform.py  terraform_runner.py  test_azure_openai_credentials.py  test_bedrock_credentials.py  test_cosmosdb_credentials.py  test_mongodb_connections.py  test_mongodb_credentials.py  tfvars.py  ui.py  validate.py  workshop_key_manager.py
terraform/: llm.tf  providers-aws.tf.disabled  providers-aws_openai.tf.disabled  providers-azure.tf.disabled  providers.tf  terraform.tfvars  variables.tf
terraform/arcade-org/: main.tf  outputs.tf  (+2 more)
testing/: .gitignore  README.md  conftest.py
(+645 files in other folders)
